package com.tpe;
public interface FacturaDAO{
  public Factura getFactura(Integer id);
  // mas metodos de la factura 
}
